change version number in startup scripts automatically